# pkg/swagger/server/restapi/operations/get_projects_id_members.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	middleware "github.com/go-openapi/runtime/middleware"
-)
-
-// GetProjectsIDMembersHandlerFunc turns a function with the right signature into a get projects ID members handler
-type GetProjectsIDMembersHandlerFunc func(GetProjectsIDMembersParams) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn GetProjectsIDMembersHandlerFunc) Handle(params GetProjectsIDMembersParams) middleware.Responder {
-	return fn(params)
-}
-
-// GetProjectsIDMembersHandler interface for that can handle valid get projects ID members params
-type GetProjectsIDMembersHandler interface {
-	Handle(GetProjectsIDMembersParams) middleware.Responder
-}
-
-// NewGetProjectsIDMembers creates a new http.Handler for the get projects ID members operation
-func NewGetProjectsIDMembers(ctx *middleware.Context, handler GetProjectsIDMembersHandler) *GetProjectsIDMembers {
-	return &GetProjectsIDMembers{Context: ctx, Handler: handler}
-}
-
-/*GetProjectsIDMembers swagger:route GET /projects/{id}/members getProjectsIdMembers
-
-retrieves project members and their filer roles.
-
-*/
-type GetProjectsIDMembers struct {
-	Context *middleware.Context
-	Handler GetProjectsIDMembersHandler
-}
-
-func (o *GetProjectsIDMembers) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		r = rCtx
-	}
-	var Params = NewGetProjectsIDMembersParams()
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params) // actually handle the request
-
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
