# pkg/swagger/server/restapi/operations/get_projects_id_members_responses.go
@@ -1,188 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/models"
-)
-
-// GetProjectsIDMembersOKCode is the HTTP code returned for type GetProjectsIDMembersOK
-const GetProjectsIDMembersOKCode int = 200
-
-/*GetProjectsIDMembersOK success
-
-swagger:response getProjectsIdMembersOK
-*/
-type GetProjectsIDMembersOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ResponseBodyProjectMembers `json:"body,omitempty"`
-}
-
-// NewGetProjectsIDMembersOK creates GetProjectsIDMembersOK with default headers values
-func NewGetProjectsIDMembersOK() *GetProjectsIDMembersOK {
-
-	return &GetProjectsIDMembersOK{}
-}
-
-// WithPayload adds the payload to the get projects Id members o k response
-func (o *GetProjectsIDMembersOK) WithPayload(payload *models.ResponseBodyProjectMembers) *GetProjectsIDMembersOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get projects Id members o k response
-func (o *GetProjectsIDMembersOK) SetPayload(payload *models.ResponseBodyProjectMembers) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetProjectsIDMembersOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetProjectsIDMembersBadRequestCode is the HTTP code returned for type GetProjectsIDMembersBadRequest
-const GetProjectsIDMembersBadRequestCode int = 400
-
-/*GetProjectsIDMembersBadRequest bad request
-
-swagger:response getProjectsIdMembersBadRequest
-*/
-type GetProjectsIDMembersBadRequest struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ResponseBody400 `json:"body,omitempty"`
-}
-
-// NewGetProjectsIDMembersBadRequest creates GetProjectsIDMembersBadRequest with default headers values
-func NewGetProjectsIDMembersBadRequest() *GetProjectsIDMembersBadRequest {
-
-	return &GetProjectsIDMembersBadRequest{}
-}
-
-// WithPayload adds the payload to the get projects Id members bad request response
-func (o *GetProjectsIDMembersBadRequest) WithPayload(payload *models.ResponseBody400) *GetProjectsIDMembersBadRequest {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get projects Id members bad request response
-func (o *GetProjectsIDMembersBadRequest) SetPayload(payload *models.ResponseBody400) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetProjectsIDMembersBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(400)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetProjectsIDMembersNotFoundCode is the HTTP code returned for type GetProjectsIDMembersNotFound
-const GetProjectsIDMembersNotFoundCode int = 404
-
-/*GetProjectsIDMembersNotFound project not found
-
-swagger:response getProjectsIdMembersNotFound
-*/
-type GetProjectsIDMembersNotFound struct {
-
-	/*
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewGetProjectsIDMembersNotFound creates GetProjectsIDMembersNotFound with default headers values
-func NewGetProjectsIDMembersNotFound() *GetProjectsIDMembersNotFound {
-
-	return &GetProjectsIDMembersNotFound{}
-}
-
-// WithPayload adds the payload to the get projects Id members not found response
-func (o *GetProjectsIDMembersNotFound) WithPayload(payload string) *GetProjectsIDMembersNotFound {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get projects Id members not found response
-func (o *GetProjectsIDMembersNotFound) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetProjectsIDMembersNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(404)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
-// GetProjectsIDMembersInternalServerErrorCode is the HTTP code returned for type GetProjectsIDMembersInternalServerError
-const GetProjectsIDMembersInternalServerErrorCode int = 500
-
-/*GetProjectsIDMembersInternalServerError failure
-
-swagger:response getProjectsIdMembersInternalServerError
-*/
-type GetProjectsIDMembersInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ResponseBody500 `json:"body,omitempty"`
-}
-
-// NewGetProjectsIDMembersInternalServerError creates GetProjectsIDMembersInternalServerError with default headers values
-func NewGetProjectsIDMembersInternalServerError() *GetProjectsIDMembersInternalServerError {
-
-	return &GetProjectsIDMembersInternalServerError{}
-}
-
-// WithPayload adds the payload to the get projects Id members internal server error response
-func (o *GetProjectsIDMembersInternalServerError) WithPayload(payload *models.ResponseBody500) *GetProjectsIDMembersInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get projects Id members internal server error response
-func (o *GetProjectsIDMembersInternalServerError) SetPayload(payload *models.ResponseBody500) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetProjectsIDMembersInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
