# pkg/swagger/server/restapi/operations/get_projects_id_storage.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	middleware "github.com/go-openapi/runtime/middleware"
-)
-
-// GetProjectsIDStorageHandlerFunc turns a function with the right signature into a get projects ID storage handler
-type GetProjectsIDStorageHandlerFunc func(GetProjectsIDStorageParams) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn GetProjectsIDStorageHandlerFunc) Handle(params GetProjectsIDStorageParams) middleware.Responder {
-	return fn(params)
-}
-
-// GetProjectsIDStorageHandler interface for that can handle valid get projects ID storage params
-type GetProjectsIDStorageHandler interface {
-	Handle(GetProjectsIDStorageParams) middleware.Responder
-}
-
-// NewGetProjectsIDStorage creates a new http.Handler for the get projects ID storage operation
-func NewGetProjectsIDStorage(ctx *middleware.Context, handler GetProjectsIDStorageHandler) *GetProjectsIDStorage {
-	return &GetProjectsIDStorage{Context: ctx, Handler: handler}
-}
-
-/*GetProjectsIDStorage swagger:route GET /projects/{id}/storage getProjectsIdStorage
-
-retrieves storage resource information of a project.
-
-*/
-type GetProjectsIDStorage struct {
-	Context *middleware.Context
-	Handler GetProjectsIDStorageHandler
-}
-
-func (o *GetProjectsIDStorage) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		r = rCtx
-	}
-	var Params = NewGetProjectsIDStorageParams()
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params) // actually handle the request
-
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
